# phonikud-tts-webui

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  start-cpu.ps1  start-cpu.sh  start-gpu.sh
api/src/: __init__.py  main.py
api/src/core/: __init__.py  config.py  model_manager.py
api/src/routers/: __init__.py  speech.py  voices.py
api/src/schemas/: __init__.py  audio.py
api/src/services/: __init__.py  tts_service.py
docker/: Dockerfile  Dockerfile.gpu  Dockerfile.ui
scripts/: download_models.py
ui/: app.py
ui/lib/: __init__.py  aac_keyboard.py  api.py  interface.py
