[project]
name = "phonikud-tts-webui"
version = "1.0.0"
description = "Hebrew TTS Web Service based on Phonikud"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gradio>=5.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.12",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "phonikud>=0.1.0",
    "phonikud-onnx>=0.1.0",
    "piper-onnx>=0.0.5",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.19.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "ui"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]